--- a/newsletter.html
+++ b/newsletter.html
@@ -154,7 +154,7 @@
 				</a>
 
 				<a href="https://www.thebox-aiesec-lausanne.com/">
-					<img src="https://static.wixstatic.com/media/d74b6f_c9029901d576411aa0c66fd2a0ac3679~mv2.png/v1/fill/w_49,h_55,al_c,q_85,usm_0.66_1.00_0.01/the%20box.webp" width="30" height="30" alt="logo the box" />
+					<img src="https://static.wixstatic.com/media/d74b6f_c9029901d576411aa0c66fd2a0ac3679~mv2.png/v1/fill/w_49,h_55,al_c,q_85,usm_0.66_1.00_0.01/the%20box.webp" width="30" height="30" alt="logoo the box" />
 				</a>
 
 				</p>
