nouvelle version newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -35,13 +35,47 @@
 
 <section>
 	<h3>what AIESEC gives to human kind :</h3>
-	<p class="blocgris">
-		AIESEC is a global platform for young people to develop their leadership potential through international internships and volunteer opportunities. Founded in 1948, AIESEC is a non-governmental, and not-for-profit organization entirely run by youth for youth.
+
+	<p>AIESEC is a non-political, independent, not-for-profit organization run by students and recent graduates of institutions of higher education. Our members are interested in world issues, leadership, and management. AIESEC does not discriminate on the basis of ethnicity, gender, sexual orientation, religion or national/social origin.</p>
+
+	<a href="https://www.youtube.com/watch?v=1u-74sc4IIs">https://www.youtube.com/watch?v=1u-74sc4IIs</a>
+
+	<p>We are passionately driven by one cause, peace and fulfillment of humankind's potential. AIESEC and the United Nations have a rich relationship of mutual belief and passion towards achieving peace in the world. We firmly believes that young people need to be at the center of the global development process. And so AIESEC and the United Nations have been working together to ensure that the world that we create tomorrow is aligned with the needs of the youth today.
+		
+	<div>Here is two of the united nations sustainable development goals that we would like to share with you today : climate action and gender equality. (the couple of SDG's will change each time)</div>
 	
+		<div style='display:flex'>
+		<div>
+			<img src="https://images.fairtrade.net/article/_articleFull/SDG5_offCentre_870.jpg" width="400" height="235" alt="logo SDG 5">
+		</div>
+		<div>
+			<img src="https://images.fairtrade.net/article/_articleFull/SDG13_offCentre_870.jpg" width="400" height="235" alt="logo SDG 5">
+		</div>
+	</div>
+
+	<div>Do they talk to you? How do you feel concerned by these topics? Do you want to share something regarding one of them? What would you set in place to concretly achieve them?</div>
+
+	<div>Send us some drawings, paintings, songs or pems related to the SDG's mentioned above!</div>
+
+	<div>Send us your works at <a href="Info.lausanne@aiesec.ch">Info.lausanne@aiesec.ch</a>. </div>
+
+	
+
+	<div>“Write it. Shoot it. Publish it. Crochet it, sauté it, whatever. MAKE.”– Joss Whedon</div>
+
+
+
+
 
 	<section class="world">
 
-		<div>About AIESEC in the world :</div>
+		<div>How AIESEC is promoting cultural exchanges :</div>
+		<a href="https://www.youtube.com/watch?v=1u-74sc4IIs"></a>
+
+		<p>AIESEC is a global platform for young people to develop their leadership potential through international internships and volunteer opportunities. Founded in 1948, AIESEC is a non-governmental, and not-for-profit organization entirely run by youth for youth.Our Global Talent program connects companies with young bright minds and help them fulfill their business needs with international students and recent graduates</p>
+
+		<a href="https://www.youtube.com/watch?v=1qLTsu8czrU">https://www.youtube.com/watch?v=1qLTsu8czrU</a>
+
 
 	</section>	
 	</p>
@@ -107,26 +141,7 @@
 <section>
 	<h3>what YOU could give to AIESEC :</h3>
 
-	<section class="blocgris">
-
-	<div>Here is two of the united nations sustainable development goals that we would like to share with you today : climate action and gender equality. (the couple of SDG's will change each time)</div>
 	
-		<div style='display:flex'>
-		<div>
-			<img src="https://images.fairtrade.net/article/_articleFull/SDG5_offCentre_870.jpg" width="400" height="235" alt="logo SDG 5">
-		</div>
-		<div>
-			<img src="https://images.fairtrade.net/article/_articleFull/SDG13_offCentre_870.jpg" width="400" height="235" alt="logo SDG 5">
-		</div>
-	</div>
-
-	<div>Do they talk to you? How do you feel concerned by these topics? Do you want to share something regarding one of them? What would you set in place to concretly achieve them?</div>
-
-	<div>Send us some drawings, paintings, songs or pems related to the SDG's mentioned above!</div>
-
-	<div>“Write it. Shoot it. Publish it. Crochet it, sauté it, whatever. MAKE.”– Joss Whedon</div>
-
-	</section>
 
 </section>
 
