encore un changement

--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
 </section>
 
 <section>
+
 	<h3>what AIESEC has been giving to its members :</h3>
 
-	<section class="blocgris">
-
-		<div>AIESEC is more than an association, it is an experience.As a matter of fact, AIESECers get to know each other as much as they get to know themselves by living, sharing, learning with an other :</div>
+	<div>AIESEC is more than an association, it is an experience.As a matter of fact, AIESECers get to know each other as much as they get to know themselves by living, sharing, learning with an other :</div>
 
 		<ul>
 			<li>
@@ -135,6 +134,17 @@
 
 			</li>	
 		</ul>
+
+	<section class="LC">
+		<div style="text-align: center; font-size: 30px; margin-bottom: 20px; margin-top: 20px; color: #F3F4F7;">Meet our local comitee :</div>
+		<img class="imageLC" src="https://zupimages.net/up/21/36/h9nc.jpg" height="400" alt="logo de bienvenue">
+		<ul class="listeLC">
+			<li>almost 50 students from every faculties.</li>
+			<li>a fully engaged executive board.</li>
+			<li>3 team leaders : TL Marketing,TL the Box, TL Innovation.</li>
+			<li>almost 40 students, newies and oldies.</li>
+		</ul>
+
 	</section>
 </section>
 
