--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 	<section class="LC">
 		<div style="text-align: center; font-size: 30px; margin-bottom: 20px; margin-top: 20px; color: #F3F4F7;">Meet our local comitee :</div>
-		<img class="imageLC" src="https://zupimages.net/up/21/36/h9nc.jpg" height="400" alt="logo de bienvenue">
+		<img class="imageLC" src="https://zupimages.net/up/21/36/h9nc.jpg" height="300" alt="image du LC">
 		<ul class="listeLC">
 			<li>almost 50 students from every faculties.</li>
 			<li>a fully engaged executive board.</li>
@@ -266,4 +266,6 @@
 </footer>
 </body>
 </html>
+
+
 
