--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
 	<section class="LC">
 		<div class="blocLC-titre" style="margin-top:20px; margin-bottom: 20px;">Meet our LC :</div>
-		<img class="imageLC" src="https://zupimages.net/up/21/36/h9nc.jpg" height="600"alt="image du LC">
+		<img class="imageLC" src="https://zupimages.net/up/21/36/h9nc.jpg" height="500"alt="image du LC">
 		<section class="listeLC">
 			<div>- almost 50 students from every faculty.</div>
 			<div>- a fully engaged executive board.</div>
@@ -225,7 +225,6 @@
 <section>
 	<h3>what AIESEC will give you :</h3>
 
-	<section class="blocgri">
 	<p>
 
 		<section class="thebox">
@@ -247,11 +246,33 @@
 				</a>
 				</section>
 		</section>
-	</section>
 </section>
 
 <section>
 	<h3>the connection with our partners:</h3>
+
+	<section class="bloc-ef">
+
+
+		<img src="https://olamerica.files.wordpress.com/2014/10/ef-banner-e1412219844472.png" width="100%" >
+
+		<div style="text-align: center; color: #FF00FF; margin-top: 30px; margin-left: 30px; margin-right: 600px; margin-bottom: 50px; border: 2px solid #FF00FF;">Win a language trip for two!</div>
+
+		<img style="float: left; margin-left: 30px; margin-right: 30px;" src="https://zupimages.net/up/21/41/rs7i.jpeg" alt="imageEF2" height="400">
+
+
+		<p style="margin-top: 50px; margin-right: 30px; text-align: initial;">Take the chance to win the ultimate language trip with a friend, the EF way. Win 1 of 10 language trips and discover one of EF’s many amazing schools around the world. How about exploring the jungle with EF Honolulu? Or learning English while shopping with EF London? Or improving your English while catching some waves with EF Miami?
+		</p>
+		<p style="margin-top:150px; margin-left: 30px; margin-right: 30px;">If you win, you can choose between any of our 50 destinations around the world, and you can travel whenever you are available – maybe during the next school holiday?</p>
+		<p style="margin-left: 30px; margin-right: 30px;">The price includes a 2-week language course with accommodation and transport to the destination. And best of all, your best friend can come with you for free as well. Because memories are better when they are shared, right?</p>
+
+		<div style="margin-left: 30px; border: 2px solid #FF00FF; margin-right: 600px; text-align: center;"><a style="text-decoration: none; color: #FF00FF;" href="https://www.efswiss.ch/fr/gocampaign/efway/ch/?source=005100,SCUCH_UNI_Off_efway_aiesec_oct21">Participate now!</a></div>
+
+		<img style="margin: 30px; width: 38.5%;" src="https://zupimages.net/up/21/41/0595.jpeg" alt="imageEF1">
+		
+
+
+	</section>
 </section>
 
 <section>
