--- a/projet-bloc.html
+++ b/projet-bloc.html
@@ -273,6 +273,11 @@
 
 
 	</section>
+
+	<section class="bloc-cs">
+		<img src="https://zupimages.net/up/21/44/maa2.jpeg" width="100%" >
+		
+	</section>
 </section>
 
 <section>
@@ -313,9 +318,9 @@
 		<div>- You amazingly just read everything we had to share with you.</div>
 		<div>- You just quickly read across the lines in order to find something interesting and did not.
 		</div>
-		<div>- You just open this mail by mistake and furiously swipe down to unsuscribe (too bad you can't).
+		<div style="margin-bottom: 40px;">- You just open this mail by mistake and furiously swipe down to unsuscribe (too bad you can't).
 		</div>
-		<div>- ?</div>
+		
 		
 	</section>
 </section>
@@ -326,7 +331,7 @@
 	<div>
 		By the way, don't forget to follow us and our partners on social medias :<div>
 		<a href="https://www.instagram.com/aiesec_lausanne/?hl=fr">
-			<img style="margin-top: 50px;"src=https://img.icons8.com/small/60/037Ef3/instagram-new.png alt="logo instagram" />
+			<img src="https://img.icons8.com/small/60/037Ef3/instagram-new.png" alt="logo instagram" />
 		</a>
 
 		<a href="https://www.thebox-aiesec-lausanne.com/">
