--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
 <body>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <section>
 <section class="bloc-affichage">
 <div style="font-size:15px;">Si cet e-mail ne s'affiche pas correctement,<a style="font-size:15px; margin-left: 2px; margin-right:0px;"href=" https://nicodu21.github.io/courseraCSS/">cliquez-ici</a>.</div>
@@ -274,6 +272,11 @@
 		
 
 
+	</section>
+	
+	<section class="bloc-cs">
+		<img src="https://zupimages.net/up/21/44/maa2.jpeg" width="100%" >
+		
 	</section>
 </section>
 
