--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <section>
 
-	<h3>what AIESEC has been giving to its members :</h3>
+	<h3><a id="target">what AIESEC has been giving to its members :</a></h3>
 
 	<section class="bloc-teamspirit">
 	<div class="centered">AIESEC is more than an association, it is an experience. As a matter of fact, AIESECers get to know each other as much as they get to know themselves by living, sharing, learning with another:
