--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
 		<img style="float: left; margin-left: 30px; margin-right: 30px;" src="https://zupimages.net/up/21/41/rs7i.jpeg" alt="imageEF2" height="400">
 
 
-		<p style="margin-top: 150px; margin-right: 30px; text-align: initial;">Take the chance to win the ultimate language trip with a friend, the EF way. Win 1 of 10 language trips and discover one of EF’s many amazing schools around the world. How about exploring the jungle with EF Honolulu? Or learning English while shopping with EF London? Or improving your English while catching some waves with EF Miami?
-		</p>
+		<p style="margin-top: 150px; margin-right: 30px; text-align: initial;"><a id="ef">Take the chance to win the ultimate language trip with a friend, the EF way. Win 1 of 10 language trips and discover one of EF’s many amazing schools around the world. How about exploring the jungle with EF Honolulu? Or learning English while shopping with EF London? Or improving your English while catching some waves with EF Miami?
+		</a></p>
 		<p style=" margin-left: 30px; margin-right: 30px;">If you win, you can choose between any of our 50 destinations around the world, and you can travel whenever you are available – maybe during the next school holiday?</p>
 		<p style="margin-left: 30px; margin-right: 30px;">The price includes a 2-week language course with accommodation and transport to the destination. And best of all, your best friend can come with you for free as well. Because memories are better when they are shared, right?</p>
 
